# Frontend-CryptoStock-Analysis-Dashboard

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  vercel.json
backend/: main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.css  App.js
frontend/src/components/common/: Header.css  Header.js  Sidebar.css  Sidebar.js
frontend/src/components/crypto/: CryptoCard.js  CryptoChart.js
frontend/src/components/sentiment/: NewsFeed.js  PredictionChart.js  SentimentGauge.js
frontend/src/components/stocks/: StockCard.js  StockChart.js
frontend/src/hooks/: useMockApi.js
frontend/src/mock/: api.js  data.js
frontend/src/pages/: AnalyticsPage.js  CryptoPage.js  Dashboard.js  StocksPage.js
src/: App.css  App.js  api.js
src/components/ArticleCard/: ArticleCard.css  ArticleCard.js
src/components/ChatWidget/: ChatWidget.css  ChatWidget.js
src/components/Controls/: Controls.css  Controls.js
src/components/Header/: Header.css  Header.js
src/components/LoadingSpinner/: LoadingSpinner.css  LoadingSpinner.js
src/components/MetricsCard/: MetricsCard.css  MetricsCard.js
src/components/Navigation/: Navigation.css  Navigation.js
src/components/PriceChart/: PriceChart.css  PriceChart.js
src/components/SentimentPanel/: SentimentPanel.css  SentimentPanel.js
src/components/StockControls/: StockControls.css  StockControls.js
src/components/StockMetrics/: StockMetrics.css  StockMetrics.js
src/hooks/: useCryptoData.js  useStockData.js
src/services/: cryptoApi.js  stockApi.js
src/styles/: App.css
